--- a/index.html
+++ b/index.html
@@ -2723,7 +2723,7 @@ body {
 																														data-sstype="layer">
 																														<a style="display:inline-block;"
 																															class="n2-ss-item-content n2-ow"
-																															href="tglink">
+																															href="https://t.me/GrabembythePussysol">
 																															<span class="n2i  n2-ss-8item9 nfa ">
 
 																																<i class="fa-brands fa-telegram"></i></a>
@@ -2743,7 +2743,7 @@ body {
 																														data-sstype="layer">
 																														<a style="display:inline-block;"
 																															class="n2-ss-item-content n2-ow"
-																															href="twitterlink">
+																															href="https://twitter.com/grabemsolana">
 																															<span class="n2i  n2-ss-8item9 nfa ">
 
 																																<i class="fa-brands fa-x-twitter"></i>
@@ -2779,7 +2779,7 @@ body {
 																									data-sstype="layer">
 																									<a style="display:inline-block;"
 																										class="n2-ss-item-content n2-ow"
-																										href="tglink"><span class="n2i  n2-ss-8item9 nfa ">
+																										href="https://t.me/GrabembythePussysol"><span class="n2i  n2-ss-8item9 nfa ">
 
 																											<i class="fa-brands fa-telegram"></i></a>
 																										</span>	
@@ -2856,7 +2856,7 @@ body {
 																									data-sstype="layer">
 																									<a style="display:inline-block;"
 																										class="n2-ss-item-content n2-ow"
-																										href="twitterlink">
+																										href="https://twitter.com/grabemsolana">
 																										<span class="n2i  n2-ss-8item9 nfa ">
 
 																											<i class="fa-brands fa-x-twitter"></i>
@@ -2916,7 +2916,7 @@ body {
 																					<a data-iconplacement="left"
 																						class="n2-style-81ba7424b65806bcbd030021264238d1-heading  n2-ow "
 																						style="background-color:#ed6732;"
-																						href="tglink">
+																						href="https://t.me/GrabembythePussysol">
 																						<div>
 																							
 																						</span>
@@ -3644,7 +3644,7 @@ body {
 																									data-sstype="layer">
 																									<a style="display:inline-block;"
 																										class="n2-ss-item-content n2-ow"
-																										href="tglink">
+																										href="https://t.me/GrabembythePussysol">
 																										<span class="n2i  n2-ss-8item9 nfa " style="color:#fff;font-size:35px">
 
 																											<i class="fa-brands fa-telegram"></i></a>
@@ -3718,7 +3718,7 @@ body {
 																									data-sstype="layer">
 																									<a style="display:inline-block;"
 																										class="n2-ss-item-content n2-ow"
-																										href="twitterlink">
+																										href="https://twitter.com/grabemsolana">
 																										<span class="n2i  n2-ss-8item9 nfa "
 																										style="color:#fff;font-size:35px"
 																										>
